force-app/main/default/objects/SQX_Part__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>you can directly change in this org so the VScode gone retieve and deploy in the GIThub</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>