force-app/main/default/objects/SQX_Part__c/fields/Part_Number__c.field-meta.xml
<CustomField>
    <fullName>Part_Number__c</fullName>
    <description>its working</description>
    <label>Part Number</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>