force-app/main/default/objects/SQX_Part__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>just checking if is working or not</description>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Part</relationshipLabel>
    <relationshipName>Part</relationshipName>
    <type>Lookup</type>
</CustomField>